# microblog

./: app.db  config.py  microblog.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: _post.html  base.html  edit_profile.html  index.html  register.html  user.html
migrations/versions/: 134ecf7bc6d2_posts_table.py  a12a28bce703_users_table.py  d0bc3e505e4e_about_and_last_seen_in_user_model.py
