[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microblog"
version = "0.1.0"
description = "Following The Flask Mega-Tutorial"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
Flask-WTF = "^1.2.1"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
email-validator = "^2.1.1"

[tool.mypy]
disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = "app.models"
disable_error_code = "name-defined"
